# fuzzylearn

./: .bumpversion.cfg  CITATION.cff  Dockerfile.publish  Dockerfile.test  Jenkinsfile  README.md  entrypoint.sh  noxfile.py  pyproject.toml  run.sh
fuzzylearn/: .gitignore  conf_optimization.yml  optimization_conf.yaml
fuzzylearn/classification/fast/: fast.py  optimum.py  ray.py
fuzzylearn/examples/: adult.py  adult_FLAutoOptunaClassifier.py  adult_FLOptimumClassifier.py  adult_FLOptunaClassifier.py  adult_FLRayClassifier.py  adult_dataset_fast.py  adult_dataset_fast_optimized.py  adult_dataset_zoish.py  crypto_dataset.py  nparray_FLClassifier.py  nparray_FLOptimumClassifier.py  nparray_FLOptunaClassifier.py  takeda_12_part_i_pp_pd_su.py  takeda_12_part_i_pp_pd_su_fast.py  takeda_12_part_i_pp_pd_su_fast_optimized_length.py  takeda_12_part_i_pp_pd_su_optimized_length.py  takeda_12_part_ii_pp_pd_su.py  takeda_12_part_ii_pp_pd_su_fast.py  takeda_12_part_ii_pp_pd_su_fast_optimized.py  takeda_12_part_ii_pp_pd_su_optimized.py  takeda_12_part_iii_pp_pd_su.py  takeda_12_part_iii_pp_pd_su_fast.py  takeda_12_part_total_pp_pd_su.py  takeda_12_part_total_pp_pd_su_fast.py  takeda_12_part_total_pp_pd_su_fast_optimized.py  takeda_12_part_total_pp_pd_su_optimized.py  test_CAD.py  test_CAD_optimized.py  uk_cad.py
fuzzylearn/interfaces/: interfaces.py
fuzzylearn/pad/: adult_dataset_simple.py  pad.py
fuzzylearn/util/: helpers.py  read_data.py
fuzzylearn/visualizations/: plots.py
tests/: test_classification.py  test_fuzzylearn.py  test_regression.py
(+36 files in other folders)
