[tool.poetry]
name = "fuzzylearn"
version = "0.1.0"
description = ""
authors = ["drhosseinjavedani <h.javedani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
wheel = "^0.40.0"
zoish = "^3.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
